--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "react-apexcharts": "^1.4.0",
+    "numeral": "^2.0.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
