--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-scripts": "5.0.1",
     "react-apexcharts": "^1.4.0",
     "numeral": "^2.0.6",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-helmet-async": "^1.3.0"
   },
   "scripts": {
     "start": "react-scripts start ",
