--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@iconify/react": "^4.1.0",
     "@mui/material": "^5.11.14",
     "@reduxjs/toolkit": "^1.9.2",
     "@testing-library/jest-dom": "^5.16.5",
@@ -13,17 +14,17 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.6",
     "bootstrap": "^5.2.3",
+    "numeral": "^2.0.6",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-redux": "^8.0.5",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
-    "react-apexcharts": "^1.4.0",
-    "numeral": "^2.0.6",
-    "web-vitals": "^2.1.4",
-    "react-helmet-async": "^1.3.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start ",
